--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "@testing-library/user-event": "^12.8.3",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.3",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2"
+    "sweetalert2": "^11.1.5",
+    "web-vitals": "^1.1.2",
+    "xlsx": "^0.17.1"
   },
   "scripts": {
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -40,6 +43,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages":"^3.2.3"
+    "gh-pages": "^3.2.3"
   }
 }
